--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-echo "node_modules/
+node_modules/
 .env
-data/*.json" > .gitignore
-git add .gitignore
-git commit -m "Add .gitignore"
-git push origin main
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+Thumbs.db
+.vscode/
+*.bak
+*.tmp
+data/*
+!data/phasejumplog.json
